--- a/main.html
+++ b/main.html
@@ -6,31 +6,37 @@
 <body>
 	<table>
         <caption>Item Cart</caption>
-		<tr>
-			<th>Item</th>
-			<th>Price</th>
-			<th>Quantity</th>
-		</tr>
-		<tr>
-			<td>Banana</td>
-			<td>₹1.00</td>
-			<td>3</td>
-		</tr>
-		<tr>
-			<td>Burger</td>
-			<td>₹6.90</td>
-			<td>1</td>
-		</tr>
-		<tr>
-			<td>Cookie</td>
-			<td>₹4.20</td>
-			<td>4</td>
-		</tr>
-		<tr>
-			<th>Total</th>
-			<td>₹12.10</td>
-			<td>8</td>
-		</tr>
+        <thead>
+            <tr>
+                <th>Item</th>
+                <th>Price</th>
+                <th>Quantity</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>Banana</td>
+                <td>₹1.00</td>
+                <td>3</td>
+            </tr>
+            <tr>
+                <td>Burger</td>
+                <td>₹6.90</td>
+                <td>1</td>
+            </tr>
+            <tr>
+                <td>Cookie</td>
+                <td>₹4.20</td>
+                <td>4</td>
+            </tr>
+        </tbody>
+        <tfoot>
+            <tr>
+                <th>Total</th>
+                <th>₹12.10</th>
+                <th>8</th>
+            </tr>
+        </tfoot>
 	</table>
     <script type="text/javascript" src="./script.js"></script>
 </body>
