--- a/main.html
+++ b/main.html
@@ -15,17 +15,17 @@
         </thead>
         <tbody>
             <tr>
-                <td>Banana</td>
+                <th>Banana</th>
                 <td>₹1.00</td>
                 <td>3</td>
             </tr>
             <tr>
-                <td>Burger</td>
+                <th>Burger</th>
                 <td>₹6.90</td>
                 <td>1</td>
             </tr>
             <tr>
-                <td>Cookie</td>
+                <th>Cookie</th>
                 <td>₹4.20</td>
                 <td>4</td>
             </tr>
